--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -14,7 +14,7 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  BROKER_URL: https://nr-broker.apps.silver.devops.gov.bc.ca
+  BROKER_URL: https://broker.io.nrs.gov.bc.ca
   BROKER_JWT: ${{ secrets.BROKER_JWT }}
   SERVICE_PROJECT: <%= projectName %>
   SERVICE_NAME: <%= serviceName %>
