--- a/generators/pd-ansible-playbook/templates/playbook.yaml
+++ b/generators/pd-ansible-playbook/templates/playbook.yaml
@@ -1,20 +1,20 @@
 ---
 - name: <%= projectName %>/<%= serviceName %>
-  hosts: "{{ tomcat_server_hosts }}"
+  hosts: tomcat-servers
   collections:
     - polaris.deploy
   vars_files:
-    - "vars/all.yaml"
-    - "vars/{{env_vars}}.yaml"
+    - "vars/standard/all.yaml"
+    - "vars/standard/{{env_vars}}.yaml"
+    - "vars/custom/all.yaml"
+    - "vars/custom/{{env_vars}}.yaml"
 
   roles:
     # Establish the port number
     - name: port_manager
-      become: yes
-      become_user: 'wwwadm'
 
     # prepare the installation environment by creating the necessary folders
-    - name: cd_prepare
+    - name: create_project_directories
 
     # individual JDK installation
     - name: jdk
@@ -28,7 +28,7 @@
           cacerts_path: 'jre/lib/security/cacerts'
         use_proxy: false
 
-    # create a self signed certificate to allow for HTTPS 
+    # create a self signed certificate to allow for HTTPS
     - name: self_signed_cert
 
     # install & configure the Tomcat container
@@ -39,45 +39,36 @@
       vars:
         webapp_war:
           context: "{{ context }}"
-          jndi_resources:
-            - "{{ webade_bootstrap_jdbc }}"          
-        webapp_root_log_level: "{{ log_level_root | default('INFO') }}"
         proxy_env: "{{ env_vars }}"
 
     # create a WebADE connection jar for the container
     - name: webade_connection_jar
-      vars:
-        webade_install_dir: "{{ cd_app_install }}/webapps/{{ alt_app_dir_name }}/WEB-INF/lib"
-        webade_datastore: "ca.bc.gov.webade.mof.MOFOrganizationDatastore"
+      # Uncomment the following line if using the MOF Webade datastore
+      # vars:
+      #   webade_datastore: "ca.bc.gov.webade.mof.MOFOrganizationDatastore"
       become: yes
       become_user: "{{ install_user }}"
 
   tasks:
+    # The following task is an example for adding custom webapp configuration files
+    # You can modify it according to your needs or remove it if custom configuration is not needed
     - name: configure nonstandard files
       template:
         src: "{{ playbook_dir }}/templates/{{ item.src }}"
         dest: "{{ item.dest }}"
-        mode: 0775
+        mode: "0775"
       become: yes
       become_user: "{{ install_user }}"
       with_items:
         - {
             src: "web.xml.j2",
-            dest: "{{ cd_app_install }}/webapps/{{ context }}/WEB-INF/web.xml"
+            dest: "{{ pd_prop_service_install_directory }}/webapps/{{ alt_app_dir_name or context }}/WEB-INF/web.xml"
           }
         - {
             src: "JMSConfig.xml.j2",
-            dest: "{{ cd_app_install }}/webapps/{{ context }}/WEB-INF/classes/JMSConfig.xml"
+            dest: "{{ pd_prop_service_install_directory }}/webapps/{{ alt_app_dir_name or context }}/WEB-INF/classes/JMSConfig.xml"
           }
         - {
             src: "tasks.xml.j2",
-            dest: "{{ cd_app_install }}/webapps/{{ context }}/WEB-INF/classes/tasks.xml"
+            dest: "{{ pd_prop_service_install_directory }}/webapps/{{ alt_app_dir_name or context }}/WEB-INF/classes/tasks.xml"
           }
-
-    - name: "set version {{ pd_prop_project_version }} as current"
-      file:
-        path: "{{ cd_app_home }}/current"
-        src: "{{ cd_app_install }}"
-        state: link
-      become: yes
-      become_user: "{{ install_user }}"
