--- a/generators/pd-ansible-playbook/templates/vars/standard/all.yaml
+++ b/generators/pd-ansible-playbook/templates/vars/standard/all.yaml
@@ -25,5 +25,9 @@ alt_app_dir_name: <%= altAppDirName %>
 # If you need to set a static port, replace the dynamic port assignment value with your static value
 tomcat_https_port: "{{ portmanager_assignments[ansible_host] }}"
 
+# This is optional. The default is '9'
+# tomcat_major_version:       "8"
+
+# This is optional. The default is the latest of the major version.
 # If you need to use a particular version of Tomcat, set the version here
-tomcat_version_number: "8.5.51"
+# tomcat_version_number:      "8.5.51"
