--- a/package.json
+++ b/package.json
@@ -13,23 +13,23 @@
     "npm": ">= 4.0.0"
   },
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint \"generators/**/*.js\"",
     "test": "jest"
   },
   "dependencies": {
-    "yaml": "^2.4.2",
-    "yeoman-generator": "^7.1.1",
+    "yaml": "^2.5.0",
+    "yeoman-generator": "^7.3.2",
     "yosay": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "lint-staged": "^15.2.1",
-    "prettier": "^3.2.4",
+    "lint-staged": "^15.2.8",
+    "prettier": "^3.3.3",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^8.2.0"
+    "yeoman-test": "^8.3.0"
   },
   "type": "module",
   "license": "Apache-2.0"
