feat: increase deployment timeout

--- a/generators/gh-maven-build/templates/deploy.yaml
+++ b/generators/gh-maven-build/templates/deploy.yaml
@@ -221,7 +221,8 @@ jobs:
           BUILD_NUMBER: ${{ needs.deploy-build.outputs.build_number || needs.deploy-tag.outputs.build_number }}
           ARTIFACT_SHA256: ${{ needs.deploy-build.outputs.artifact_sha256 || needs.deploy-tag.outputs.artifact_sha256 }}
           DOWNLOAD_URL: ${{ needs.deploy-build.outputs.download_url || needs.deploy-tag.outputs.download_url }}
-      # The automatically generated GitHub token will expire when the workflow ends. We need to wait so the job has time to clone the repo.
-      - name: Sleep for 30 seconds
-        run: sleep 30s
+      # The automatically generated GitHub token will expire when the workflow ends. We need to wait so the job has time to clone the repo
+      # and download the package
+      - name: Sleep
+        run: sleep 90s
         shell: bash
