--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -15,7 +15,7 @@ concurrency:
 
 env:
   BROKER_URL: https://broker.io.nrs.gov.bc.ca
-  BROKER_JWT: ${{ secrets.BROKER_JWT }}
+  BROKER_JWT: ${{ secrets.<%= brokerJwt %> }}
   SERVICE_PROJECT: <%= projectName %>
   SERVICE_NAME: <%= serviceName %>
 
@@ -93,7 +93,7 @@ jobs:
       - name: Open intention
         uses: bcgov-nr/action-broker-intention-open@v2
         with:
-          broker_jwt: ${{ secrets.BROKER_JWT }}
+          broker_jwt: ${{ secrets.<%= brokerJwt %> }}
           intention_path: intention.json
           quickstart: true
       - name: Set intention ID for deployment job
