--- a/generators/gh-maven-build/templates/build-release.yaml
+++ b/generators/gh-maven-build/templates/build-release.yaml
@@ -20,6 +20,10 @@ env:
   SERVICE_NAME: <%= serviceName %>
 
 jobs:
+  check_token_expiration:
+    uses: ./.github/workflows/check-token.yaml
+    secrets:
+      token: ${{ secrets.<%= brokerJwt %> }}
 <% if (unitTestsPath) { -%>
   test:
     name: Test
@@ -30,7 +34,9 @@ jobs:
     name: Build and release
     runs-on: ubuntu-latest
 <% if (unitTestsPath) { -%>
-    needs: test
+    needs: [check_token_expiration, test]
+<% } else { -%>
+    needs: check_token_expiration
 <% } -%>
     permissions:
       contents: read
