--- a/generators/gh-nodejs-build/templates/deploy.yaml
+++ b/generators/gh-nodejs-build/templates/deploy.yaml
@@ -17,11 +17,7 @@ env:
   SERVICE_NAME: <%= serviceName %>
   JOB: buildByToken/buildWithParameters?job=<%= projectName %>/<%= serviceName %>
   URL: https://cd.io.nrs.gov.bc.ca
-<% if (gitHubPackages) { -%>
   PACKAGE_REPO: ghcr.io/${{ github.repository }}/package
-<% } else { -%>
-  PACKAGE_REPO: https://artifacts.developer.gov.bc.ca/artifactory/<%= artifactoryProject %>-<%= projectName %>-<%= artifactoryPackageType %>-local
-<% } -%>
 
 jobs:
   check_token_expiration:
@@ -76,24 +72,11 @@ jobs:
             ref: ${{ github.ref }}
       - name: Set nodejs package download URL
         id: set-download-url
-<% if (gitHubPackages) { -%>
         run: |
           SAFE_PACKAGE_TAG=$(echo "$PACKAGE_TAG" | tr '/' '-')
           DOWNLOAD_URL="${PACKAGE_REPO}:${SAFE_PACKAGE_TAG}"
           echo "${DOWNLOAD_URL}"
           echo "download_url=$(echo ${DOWNLOAD_URL})" >> $GITHUB_OUTPUT
-<% } else { -%>
-        run: |
-          sudo apt-get -qq install libxml2-utils
-          GROUP_ID=$(mvn help:evaluate -Dexpression=project.groupId -q -DforceStdout --file <%= pomRoot %>pom.xml)
-          GROUP_ID_PATH="${GROUP_ID//.//}"
-          PACKAGE_TYPE=$(mvn help:evaluate -Dexpression=project.packaging -q -DforceStdout --file <%= pomRoot %>pom.xml)
-          SNAPSHOT_VERSION=$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout --file <%= pomRoot %>pom.xml)
-          ARTIFACT_NAME="${SERVICE_NAME}-${SNAPSHOT_VERSION}.${PACKAGE_TYPE}"
-          DOWNLOAD_URL="${PACKAGE_REPO}/${GROUP_ID_PATH}/${SERVICE_NAME}/${PROJECT_VERSION}/${ARTIFACT_NAME}"
-          echo "${DOWNLOAD_URL}"
-          echo "download_url=$(echo ${DOWNLOAD_URL})" >> $GITHUB_OUTPUT
-<% } -%>
         env:
           PACKAGE_TAG: ${{ github.ref_name }}
           PACKAGE_REPO: ${{ env.PACKAGE_REPO }}
@@ -175,7 +158,7 @@ jobs:
           --data-urlencode "gitTag=${{ (startsWith(github.ref, 'refs/tags/') && github.ref_name) || '' }}" \
           --data-urlencode "configBranch=${{ inputs.config_branch || '' }}" \
           --data-urlencode "downloadUrl=${DOWNLOAD_URL}" \
-          --data-urlencode "downloadType=<% if (gitHubPackages) { -%>GITHUB<% } else { -%>ARTIFACTORY<% } -%>" \
+          --data-urlencode "downloadType=OCI" \
           -H "Connection: close" \
           ${{ env.URL }}/${{ env.JOB }}
         env:
