--- a/generators/gh-maven-build/templates/deploy.yaml
+++ b/generators/gh-maven-build/templates/deploy.yaml
@@ -26,6 +26,7 @@ env:
 jobs:
   check_token_expiration:
     uses: ./.github/workflows/check-token.yaml
+    permissions: {}
     secrets:
       token: ${{ secrets.<%= brokerJwt %> }}
   deploy-build:
@@ -33,6 +34,9 @@ jobs:
     if: ${{ ! startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     needs: check_token_expiration
+    permissions:
+      contents: read
+      packages: read
     outputs:
       project_version: ${{ steps.set-build-output.outputs.project_version }}
       build_guid: ${{ steps.set-build-output.outputs.build_guid }}
@@ -117,6 +121,9 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     needs: check_token_expiration
+    permissions:
+      contents: read
+      packages: read
     outputs:
       project_version: ${{ steps.set-tag-output.outputs.project_version }}
       build_guid: ${{ steps.set-tag-output.outputs.build_guid }}
@@ -187,6 +194,10 @@ jobs:
       ((needs.deploy-build.result == 'success' && needs.deploy-tag.result == 'skipped') ||
       (needs.deploy-build.result == 'skipped' && needs.deploy-tag.result == 'success'))
     needs: [deploy-build, deploy-tag]
+    permissions:
+      actions: read
+      packages: read
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - name: Submit a job to Jenkins
