--- a/generators/pd-ansible-playbook/templates/vars/standard/all.yaml
+++ b/generators/pd-ansible-playbook/templates/vars/standard/all.yaml
@@ -9,19 +9,19 @@ ansible_ssh_extra_args: "-o StrictHostKeyChecking=no"
 # General properties
 polaris_apps_project_name: "<%= projectNameUpperCase %>"
 polaris_apps_service_name: "<%= serviceName %>"
-webapp_artifact_name: "{{ lookup('ansible.builtin.env', 'PODMAN_ARTIFACT_NAME') }}"
 
-# pd_prop_artifact_sha256: "{{ lookup('ansible.builtin.env', 'PODMAN_ARTIFACT_SHA256') }}"
 pd_prop_project_version: "{{ lookup('ansible.builtin.env', 'PODMAN_PROJECT_VERSION') }}"
 pd_prop_build_number: "{{ lookup('ansible.builtin.env', 'PODMAN_BUILD_NUMBER') }}"
 polaris_apps_service_install_name: "{{ pd_prop_project_version }}-{{ pd_prop_build_number }}"
 
 # The following properties are custom to each particular service
+<% if (tomcatContext) { -%>
 context: <%= tomcatContext %>
+<% } -%>
 <% if (altAppDirName) { -%>
 alt_app_dir_name: <%= altAppDirName %>
 <% } -%>
 
 # By default, the Tomcat port is set dynamically by using the port_manager role
 # If you need to set a static port, replace the dynamic port assignment value with your static value
-# tomcat_https_port: "{{ portmanager_assignments[ansible_host] }}"
+tomcat_https_port: "{{ portmanager_assignments[ansible_host] }}"
